2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gstreamer/0.8.4.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  release notes

2004-07-18  David I. Lehn <dlehn@users.sourceforge.net>

	* src/htdocs/news/news2rss-1.0.xsl:
	  Add fragment id to item links

2004-07-18  David I. Lehn <dlehn@users.sourceforge.net>

	* bin/planet-update:
	  Add Planet GStreamer update script
	* src/configure.in:
	* src/htdocs/Makefile.am:
	  Planet GStreamer dir creation
	* src/htdocs/header.xml:
	* src/htdocs/news/news.xml:
	  Add Planet GStreamer to site

2004-07-18  David I. Lehn <dlehn@users.sourceforge.net>

	* src/htdocs/news/news2rss-1.0.xsl:
	  Attempt to fix rss feed escaping

2004-07-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/modules/modules.xml:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	  releasing

2004-07-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xsl:
	  add blocker bugs
	* src/htdocs/news/news.xml:
	  fix typo
	* src/htdocs/releases/gst-ffmpeg/0.8.1.xml:
	  add release notes

2004-07-12  David I. Lehn <dlehn@users.sourceforge.net>

	* src/htdocs/index.xsl:
	* src/htdocs/news/Makefile.am:
	* src/htdocs/news/news.xsl:
	* src/htdocs/news/news2atom.xsl:
	* src/htdocs/news/news2rss-1.0.xsl:
	Generate news feed

2004-07-11  David I. Lehn <dlehn@users.sourceforge.net>

	* ChangeLog:
	Starting off a www module ChangeLog