@@ -1151,4 +1151,22 @@ If <a href="&site;/planet/">PG</a> is too much braindump for you, we also now of
     </content>
   </item>
 
+  <item>
+    <date>2004-07-20 21:05</date>
+    <title>GStreamer 0.8.4 "Paella" released</title>
+    <content>
+<p>
+The GStreamer team is proud to announce a new stable release of the
+GStreamer 0.8.x series.
+</p>
+<p>
+Check out
+<a href="&site;/releases/gstreamer/0.8.4.html">release notes</a>
+or download the
+<a href="&site;/src/gstreamer/gstreamer-0.8.4.tar.gz">tar.gz</a> or
+<a href="&site;/src/gstreamer/gstreamer-0.8.4.tar.bz2">tar.bz2</a> archive.
+</p>
+    </content>
+  </item>
+
 </news>
